--- a/mall-tiny-02/src/main/resources/application.yml
+++ b/mall-tiny-02/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 server:
-  port: 8080
-
+  port: 7002
+  servlet:
+    context-path: /mall-tiny-02
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://124.221.249.213:3306/mall_learning?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: myk522326
 
 mybatis:
   mapper-locations:
