--- a/mall-tiny-06/pom.xml
+++ b/mall-tiny-06/pom.xml
@@ -10,12 +10,14 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!-- 这里SpringBoot默认配置的版本不匹配，我们需要自己配置版本！ -->
+        <elasticsearch.version>7.6.1</elasticsearch.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <dependencies>
@@ -59,7 +61,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
+            <version>5.1.49</version>
         </dependency>
         <!--Swagger-UI API文档生产工具-->
         <dependency>
