--- a/mall-tiny-06/src/main/resources/application.yml
+++ b/mall-tiny-06/src/main/resources/application.yml
@@ -1,11 +1,12 @@
 server:
-  port: 8080
-
+  port: 7006
+  servlet:
+    context-path: /mall-tiny-06
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://124.221.249.213:3306/mall_learning?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: myk522326
   redis:
     host: localhost # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
@@ -44,3 +45,7 @@ jwt:
   secret: mySecret #JWT加解密使用的密钥
   expiration: 604800 #JWT的超期限时间(60*60*24)
   tokenHead: Bearer  #JWT负载中拿到开头
+logging:
+  level:
+    root: info
+    com.macro.mall: debug
