--- a/mall-tiny-08/pom.xml
+++ b/mall-tiny-08/pom.xml
@@ -10,15 +10,21 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!-- 这里SpringBoot默认配置的版本不匹配，我们需要自己配置版本！ -->
+        <elasticsearch.version>7.6.1</elasticsearch.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <!--SpringBoot通用依赖模块-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,7 +65,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.15</version>
+            <version>5.1.49</version>
         </dependency>
         <!--Swagger-UI API文档生产工具-->
         <dependency>
@@ -113,6 +119,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <!--<optional>true</optional>的用法
+            https://blog.csdn.net/corleone_4ever/article/details/104021435
+            -->
             <optional>true</optional>
         </dependency>
     </dependencies>
